# hearthforge

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/dm-retro/: SKILL.md
.claude/skills/dm-session/: SKILL.md
.claude/skills/grill-me/: SKILL.md
.codex/: config.toml
data/srd/: ATTRIBUTION.md
docs/: SCHEMA.md
docs/superpowers/plans/: 2026-07-08-m1-foundation.md  2026-07-08-roadmap.md  2026-07-09-character-mechanics.md  2026-07-09-m2-rules-engine.md  2026-07-09-m3-state-commands.md  2026-07-09-m4-interfaces-dm.md  2026-07-11-model-eval-harness.md  2026-07-11-tva-31-tva-32-eval-event-shapes.md  (+3 more)
evals/: cells.py  judge.py  llm.py  metrics.py  player.py  report.py  run.py  runner.py  scenario.py
evals/scenarios/: caravan_ambush.yaml
scripts/: sync_srd.py
tests/: conftest.py  test_character_models.py  test_cli.py  test_lookup.py  test_markdown_sections.py  test_mcp_schema.py  test_mcp_server.py  test_seed.py  test_srd_models.py
tests/commands/: conftest.py  test_attacks.py  test_campaign.py  test_characters.py  test_checks.py  test_combat.py  test_combatants.py  test_effects.py  test_queries.py  test_registry.py  test_resources.py  test_rulings.py  test_scene_props.py  test_spells.py  test_world.py
tests/evals/: test_cells.py  test_judge.py  test_metrics.py  test_player.py  test_report.py  test_run.py  test_runner.py  test_scenario.py
tests/integration/: test_combat_headless.py  test_e2e_active_effects.py  test_e2e_audit_and_integrity.py  test_e2e_auto_checkpoint.py  test_e2e_campaign_lifecycle.py  test_e2e_character_mechanics.py  test_e2e_combat_goblin_ambush.py  test_e2e_death_modes.py  test_e2e_resume_rehydration.py  test_e2e_scene_html.py  test_e2e_spell_tiers.py  test_mcp_smoke.py
tests/rules/: test_action_economy.py  test_active_effects.py  test_attacks.py  test_bands.py  test_character_build.py  test_checks.py  test_concentration.py  test_conditions.py  test_damage.py  test_death.py  test_dice.py  test_encounters.py  test_initiative.py  test_progression.py  test_rests.py
tests/state/: test_migrate.py  test_scene_props_store.py  test_scene_render.py  test_scene_view.py  test_sheets.py  test_store.py
(+50 files in other folders)
