[project]
name = "dm-engine"
version = "0.1.0"
description = "Rules engine and game state for an AI-driven D&D 5e dungeon master"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.scripts]
dm = "dm_engine.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "hypothesis>=6.100",
    "pytest-cov>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dm_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# The frozen binding tests use `;`-joined statements verbatim.
"tests/commands/test_combat.py" = ["E702"]

[tool.coverage.report]
exclude_also = [
    "^\\s*\\.\\.\\.$",
]
