[project]
name = "dm-engine"
version = "0.1.0"
description = "Rules engine and game state for an AI-driven D&D 5e dungeon master"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.scripts]
dm = "dm_engine.cli.app:app"
dm-eval = "evals.run:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "hypothesis>=6.100",
    "pytest-cov>=5",
]
eval = [
    "anthropic>=0.116",
    "claude-agent-sdk>=0.1.0",
    "pyyaml>=6",
]

[tool.uv]
default-groups = ["dev", "eval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dm_engine", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "evals"]

[tool.ruff.lint.per-file-ignores]
# The frozen binding tests use `;`-joined statements verbatim.
# The frozen MCP smoke test imports `anyio` verbatim (documents the backend
# the anyio plugin drives) though it is only referenced via the plugin.
"tests/integration/test_mcp_smoke.py" = ["F401"]
"tests/commands/test_combat.py" = ["E702"]
"tests/commands/test_attacks.py" = ["E701", "E702"]
"tests/commands/test_spells.py" = ["E702"]

[tool.coverage.report]
exclude_also = [
    "^\\s*\\.\\.\\.$",
]
